<resources>
    <string name="app_name">Aachamaacha</string>
    <string name="action_settings">Filter</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="leftNavImages">
        <item>@drawable/homeicon</item>
    </string-array>
    <string-array name="Agent">
        <item>Search</item>
        <item>News</item>
        <item>Account</item>
        <item>About Us</item>

        <item>Share Our App</item>
        <item>Sign Out</item>
    </string-array>
    <string-array name="leftlisttitles">
        <item>Update</item>
        <item>Profile</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>Share</item>

    </string-array>
    <string-array name="titles">
        <item>Update</item>
        <item>Profile</item>
        <item>About Us</item>
        <item>Contact Us</item>
        <item>Share</item>
        <item>Maps</item>
        <item>Chat</item>

    </string-array>
    <string name="User">user</string>
    <string-array name="descriptions">
        <item>Update your</item>
        <item>Profile info</item>
        <item>Sourabh Goyal</item>
        <item>Coreapps lab</item>
        <item>Share everywhere</item>
        <item>Google Maps</item>
        <item>Can take Advice</item>
    </string-array>
    <string name="RETRIEVING_PWD">Retrieving password...</string>
    <string-array name="list_of_countries">
        <item>India</item>
        <item>USA</item>
        <item>Uk</item>
        <item>Canada</item>
        <item>Australia</item>
        <item>France</item>
        <item>Italy</item>
        <item>China</item>
        <item>Japan</item>
        <item>Spain</item>
    </string-array>
    <string-array name="cities">
        <item>Select City</item>

        <item>Jaipur</item>
        <item>Ajmer</item>
        <item>Udaipur</item>
    </string-array>
    <string-array name="pricefrom">

    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
</string-array>
    <string-array name="priceto">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="FilterCriterias">
        <item>category</item>
    </string-array>
    <string name="AGENT">Agent</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Login Form</string>
    <string name="title_activity_sign_up">Sign Up Form</string>
    <string name="title_activity_load_test">LoadTestActivity</string>
    <string name="title_activity_intitializer">Categories</string>
    <string name="title_activity_newsDetails">News Details</string>
    <string name="Loading_categories">Loading Categories</string>
    <string name="Login_Successfull">Login Successful</string>
    <string name="update">UPDATE</string>
    <string name="aachamaacha">AACHAMAACHA</string>
    <string name="My_Coupons">My Coupons</string>
    <string name="title_activity_splash_">Splash_Activity</string>
    <string name="enter_your_email">enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">enter your password</string>
    <string name="Email">EMAIL</string>
    <string name="log_in">LOG IN</string>
    <string name="Image_Error"></string>
    <string-array name="type">
        <item>Select type</item>

        <item>Agent</item>
    <item>User</item>


</string-array>
    <string name="sale">Select sale type</string>
    <string name="Type">Type</string>
    <string-array name="property_type">
        <item>Select property type</item>
        <item>Apartment</item>
        <item>Individual House</item>
        <item>Row House</item>
        <item>Villa</item>
        <item>Builder Floor</item>
        <item>Pent House</item>
        <item>Farm House</item>
        <item>Service Apartment</item>
        <item>Studio Apartment</item>

    </string-array>
    <string name="Property_Type">Property Type</string>
    <string-array name="City">
        <item>Select city</item>
        <item> Adilabad</item>
        <item> Agra</item>
        <item>Ahmedabad</item>
        <item>Ahmednagar</item>
        <item>Aizawl</item>
        <item>Ajitgarh (Mohali)</item>
        <item>Ajmer</item>
        <item>Akola</item>
        <item>Alappuzha</item>
        <item> Aligarh</item>
        <item> Alirajpur</item>
        <item> Allahabad</item>
        <item> Almora</item>
        <item> Alwar</item>
        <item> Ambala</item>
        <item> Ambedkar Nagar</item>
        <item> Amravati</item>
        <item>Amreli district</item>
    <item>Amritsar</item>
        <item>Anand</item>
        <item>Anantapur</item>
        <item>Anantnag</item>
        <item>Angul</item>
        <item>Anjaw</item>
        <item>Anuppur</item>
        <item>Araria</item>
        <item>Ariyalur</item>
        <item>Arwal</item>
        <item>Ashok Nagar</item>
        <item>Auraiya</item>
        <item>Aurangabad</item>
        <item>Aurangabad</item>
        <item>Azamgarh</item>
        <item>Badgam</item>
        <item>Bagalkot</item>
        <item>Bageshwar</item>
        <item>Bagpat</item>
        <item>Bahraich</item>
        <item>Baksa</item>
        <item>Balaghat</item>
        <item>Balangir</item>
        <item>Balasore</item>
        <item>Ballia</item>
        <item>Balrampur</item>
    <item>Banaskantha</item>
        <item>Banda</item>
        <item>Bandipora</item>
        <item>Bangalore Rural</item>
        <item>Bangalore Urban</item>
        <item>Banka</item>
        <item>Bankura</item>
        <item>Banswara</item>
        <item>Barabanki</item>
        <item>Baramulla</item>
        <item>Baran</item>
        <item>Bardhaman</item>
        <item>Bareilly</item>
        <item>Bargarh (Baragarh)</item>
        <item>Barmer</item>
        <item>Barnala</item>
        <item>Barpeta</item>
        <item>Barwani</item>
        <item>Bastar</item>
        <item>Basti</item>
        <item>Bathinda</item>
        <item>Beed</item>
        <item>Begusarai</item>
        <item>Belgaum</item>
        <item>Bellary</item>
        <item>Betul</item>
        <item>Bhadrak</item>
        <item>Bhagalpur</item>
        <item>Bhandara</item>
        <item>Bharatpur</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Bhilwara</item>
        <item>Bhind</item>
        <item>Bhiwani</item>
        <item>Bhojpur</item>
        <item>Bhopal</item>
        <item>Bidar</item>
        <item>Bijapur</item>
        <item>Bijapur</item>
        <item>Bijnor</item>
        <item>Bikaner</item>
        <item>Bilaspur</item>
        <item>Bilaspur</item>
        <item>Birbhum</item>
        <item>Bishnupur</item>
        <item>Bokaro</item>
        <item>Bongaigaon</item>
        <item>Boudh (Bauda)</item>
        <item>Budaun</item>
        <item>Bulandshahr</item>
        <item>Buldhana</item>
        <item>Bundi</item>
        <item>Burhanpur</item>
        <item>Buxar</item>
        <item>Cachar</item>
        <item>Central Delhi</item>
        <item>Chamarajnagar</item>
        <item>Chamba</item>
        <item>Chamoli</item>
        <item>Champawat</item>
        <item>Champhai</item>
        <item>Chandauli</item>
        <item>Chandel</item>
        <item>Chandigarh</item>
        <item>Chandrapur</item>
        <item>Changlang</item>
        <item>Chatra</item>
        <item>Chennai</item>
        <item>Chhatarpur</item>
        <item>Chhatrapati Shahuji Maharaj Nagar</item>
        <item>Chhindwara</item>
        <item>Chikkaballapur</item>
        <item>Chikkamagaluru</item>
        <item>Chirang</item>
        <item>Chitradurga</item>
        <item>Chitrakoot</item>
        <item>Chittoor</item>
        <item>Chittorgarh</item>
        <item>Churachandpur</item>
        <item>Churu</item>
        <item>Coimbatore</item>
        <item>Cooch Behar</item>
        <item> Cuddalore</item>
        <item>Cuttack</item>





        <item></item>


    </string-array>
    <string-array name="Locality">
    </string-array>
    <string-array name="states">
<item>Andaman and Nicobar Islands</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhatisgarh</item>
        <item>Dadar And Nagar Haveli</item>
        <item>Daman And Diu</item>
        <item>National Capital Territory Of Delhi</item>
        <item>Goa</item>
        <item>Gujrat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu And Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhaya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>

    </string-array>
    <string name="city">City</string>
    <string name="News">Aachamaacha</string>
    <string name="News_Home">Propety_Dealer</string>
    <string name="Registration_Successfull">Registration Successful</string>
    <string name="VERIFICATION_CODE">Incorrect Verification Code </string>
    <string name="Options">Options</string>
    <string name="title_activity_location_news_detail">Location News Details</string>
    <string name="companyName">Aachamaacha</string>
    <string name="companyDetail">Welcome to India\'s First Property Exchange Portal Aachamaacha.com where you can exchange, buy,sell your property </string>
    <string name="companyAddress">428-Jaipur Electronic Market \n Mansarovar \n Jaipur \n Rajasthan</string>
    <string name="companyMobNo">+91-8559859173</string>
    <string name="companyEmailAddress">sourabhgoyal007@gmail.com</string>
    <string name="companyContactPerson">Sourabh Goyal</string>
    <string name="LBL_ADDRESS">Address</string>
    <string name="LBL_SEARCH_YOUR_AREA">Search your area...</string>
    <string name="LBL_FILTER_CRITERIA">Filter Criteria</string>
    <string name="LBL_CHOOSE_CATEGORY">Choose a category</string>
    <string name="LBL_USERNAME">Email Address</string>
    <string name="LBL_PASSWORD">Password</string>
    <string name="LBL_SIGN_IN">Sign In</string>
    <string name="CREATING_ACCOUNT">Creating Account...</string>
    <string name="LOGIN_ACCOUNT">loging Account...</string>
    <string name="LOADING_YOUR_PROPERTY">loading your property...</string>
    <string name="UPDATING_INFO">Updating Info...</string>
    <string name="UPDATE">Update</string>
    <string name="LBL_SIGN_UP">Sign Up</string>
    <string name="LBL_BUY_DEAL">Buy Deal</string>
    <string name="LBL_DESCRIPTION">DESCRIPTION</string>
    <string name="LBL_LOCATION">LOCATION</string>
    <string name="LBL_MOBILE_NO">Mobile No</string>
    <string name="LBL_EMAIL_ADDRESS">Email Address</string>
    <string name="LBL_CONFIRM_PASSWORD">Confirm Password</string>
    <string name="LBL_LOCALITY">Locality</string>
    <string name="LBL_CITY">City</string>
    <string name="LBL_STATE">State</string>
    <string name="LBL_AGE">Age</string>
    <string name="LBL_REFERRAL_CODE">Referral code</string>
    <string name="LBL_RESET">Reset</string>
</resources>